# new_sencjw

./: .gitignore  Makefile  README.md  contact.markdown  convert.hs  functional_web.markdown  index.html  interviews.markdown  sencjw.cabal  site.hs  stack.yaml  talks.markdown  the_square_root_of_christmas.markdown  transparent_web.markdown  writings.markdown
css/: default.css
posts/: 2010-11-13-remembrance-of-blogs-past.markdown  2010-11-16-maine.markdown  2010-12-05-unfill-paragraph--only-Emacs-nerds-need-apply-.markdown  2011-03-02-Don-t-zip--bundle-1-.markdown  2011-03-20-learning-to-type-on-the-twiddler-keyboard.markdown  2011-05-01-hackerspace-show-on-wisconsin-public-radio.markdown  2011-05-27-first-post.markdown  2011-06-21-code-crawl.markdown  2011-07-03-social-networking.markdown  2011-08-16-madison-ruby-conference.markdown  2011-09-24-strangeloop-2011-notes.markdown  2011-12-15-sopa-hearings.markdown  2011-12-27-secret-santa.markdown  2012-05-05-my-gpl-talk.markdown  2012-08-22-my-transparent-web-talk.markdown  2012-09-03-the-dipert-problem.markdown  2013-04-06-lists-out-of-lambdas-and-boxes-out-of-functions.markdown  2013-08-07-nand2tetris--low-level-love.markdown  2013-08-20-code-budget.markdown  2013-09-14-named-parameters-in-haskell.markdown  2013-10-03-reactive-record.markdown  2013-11-08-chihack.markdown  2014-03-27-working-computer.markdown  2014-04-22-feynman-understands-programming.markdown  2014-04-30-lenses-101.lhs  2014-05-19-bayhac-2014.markdown  2014-08-17-not-smart-enough.markdown  2014-12-22-haskell-at-work.markdown  2015-01-03-meetup.markdown  (+6 more)
(+4 files in other folders)
