name:               sencjw
version:            0.1.0.0
synopsis:           My personal website
homepage:           http://sencjw.com
license-file:       LICENSE
author:             Chris Wilson
maintainer:         chris@sencjw.com
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

executable sencjw
  main-is:            site.hs
  build-depends:      base >=4.8 && <4.9
                    , containers
                    , hakyll
                    , pandoc
  default-language:   Haskell2010
